--- a/web/less/live_contest_comp.less
+++ b/web/less/live_contest_comp.less
@@ -1,68 +1,3 @@
-//barra que muestra los partidos que intervienen en el concurso y los encales sociales
-.info-and-social-bar{
-	.make-row(0);
-	background-color: @tramaBlue;
-	.social{
-		.make-xs-column(0);
-		width: 150px;
-		padding: 9px 20px;
-	}
-	.teams-toggler-wrapper {
-		background-color: @white;
-		.teams-toggler {
-			.opensans_bold(8pt, @greyDark);
-			.user-select(none);
-			padding: 15px;
-		}
-		.toggleOff::after{
-			.create-glyph("\E114", 8pt, @greyUltraDark);
-			position: absolute;
-			right: 15px;
-		}
-		.toggleOn::after{
-			.create-glyph("\E113", 8pt, @greyUltraDark);
-			position: absolute;
-			right: 15px;
-		}
-	}
-	.teams-container {
-		.make-row(0);
-		padding: 10px 5px;
-		@media (max-width: @screen-xs-max) {			
-			background-color: @greyLight;
-			padding: 0;
-			.top-border {
-				.make-border(2px, solid none none none, @greyDark);
-				height: 10px;
-			}
-			.bottom-border {
-				.make-border(2px, none none solid none, @greyDark);
-				height: 10px;
-				clear: both;
-			}
-		}
-
-		.teams-box{
-			.make-xs-column(4);
-			.make-sm-column(3);
-			.make-md-column(2);
-			.clean-paddings();
-			.teams-info{
-				.opensans_bold(9pt, @greyMed);
-				min-width: 90px;
-				background-color: @white;		
-				border-radius: 10px;
-				padding: 5px 0;
-				margin: 0 4px 8px 4px;
-				@media (max-width: @screen-xs-max) {
-					margin: 4px;
-				}
-				text-align: center;
-				line-height: 15px;
-			}
-		}
-	}
-}
 #liveContestRoot {
 	@media (min-width: @screen-sm-min) {
 		padding-top: 20px;	// Quitar cuando haya mas componentes, usar un espaciador vertical
